// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MergePrompt > snapshots > renders conflicts state correctly 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│ ⚠️  Merge Conflicts Detected                                                                     │
│ Branch: feature-conflicts                                                                        │
│                                                                                                  │
│ Have the agent resolve conflicts? [r] Resolve                                                    │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`MergePrompt > snapshots > renders failed state correctly 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│ ❌ Merge Test Failed                                                                              │
│ Branch: feature-failed                                                                           │
│ Something went wrong                                                                             │
│                                                                                                  │
│ Have the agent resolve this? [r] Resolve                                                         │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`MergePrompt > snapshots > renders failed state without error correctly 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│ ❌ Merge Test Failed                                                                              │
│ Branch: feature-failed-no-error                                                                  │
│                                                                                                  │
│ Have the agent resolve this? [r] Resolve                                                         │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`MergePrompt > snapshots > renders ready state correctly 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│ 🌿 Merge Ready                                                                                   │
│ Branch: feature-xyz                                                                              │
│ No conflicts detected. The agent will merge and clean up the worktree.                           │
│                                                                                                  │
│ Approve merge? [y] Yes  [n] No                                                                   │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;
